# ailib

./: .gitignore  .nbval_sanitize.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  README_CN.md  ROADMAP.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  notebook-validation.yml  test.yml
docs/: index.md  installation.md  notebook_testing.md  quick_reference.md  technical_roadmap.md  usage.md
docs/meta/: AGENT_WORKFLOW_REQUIREMENTS.md  ANALOGY.md  PLAN.md  RESEARCH.md  RESEARCH_CN.md  SIMPLIFIED_WORKFLOW_API_DESIGN.md  VALIDATION_REFACTOR_NOTES.md  WORKFLOW_DESIGN_REVIEW.md
docs/misc/: 技术评估完成指南.md  技术评估演示.ipynb
docs/workflows/: api-reference.md  getting-started.md  overview.md
examples/: ailib_showcase.ipynb  basic_usage.py  custom_llm_providers.py  custom_moderation_example.py  multi_provider_demo.py  openai_compatible_providers.py  safety_example.py  simplified_api_example.py  tracing_advanced.py  tracing_basic.py  validation_example.py  workflow_advanced.py  workflow_basic.py
examples/tutorials/: 00_index.ipynb  01_setup_and_installation.ipynb  02_basic_llm_completions.ipynb  03_prompt_templates.ipynb  04_prompt_builder.ipynb  05_session_management.ipynb  06_chains.ipynb  07_tools_and_decorators.ipynb  08_agents.ipynb  09_advanced_features.ipynb  10_real_world_examples.ipynb  11_simplified_api.ipynb  12_safety_and_moderation.ipynb  13_tracing_and_debugging.ipynb  14_workflows.ipynb
scripts/: test_notebooks.sh  test_providers.py  validate_notebooks.py
src/ailib/: __init__.py  _validation.py  cli.py
src/ailib/agents/: __init__.py  agent.py  tools.py
src/ailib/chains/: __init__.py  chain.py
src/ailib/core/: __init__.py  anthropic_client.py  client_factory.py  llm_client.py  openai_client.py  prompt.py  providers.py  session.py
src/ailib/safety/: __init__.py  _core.py  _moderation.py  hooks.py
src/ailib/tracing/: __init__.py  _core.py  _otel.py
src/ailib/workflows/: __init__.py  _builder.py  _core.py  _error_handling.py  _state.py  _steps.py
tests/: __init__.py  test_agents.py  test_ailib.py  test_chains.py  test_core.py  test_integration_providers.py  test_multi_provider.py  test_provider_edge_cases.py  test_safety.py  test_validation.py  test_workflows.py
